# academic-trend-monitor

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  PROJECT.md  README.en.md  README.md  RESUME_PROMPT.md  pyproject.toml  requirements.txt
config/: prompts.yaml  settings.yaml
data/: README.md  recent.jsonl
frontend/: index.html  package-lock.json  package.json  vite.config.js
graphiti-server/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  import_data.py  main.py  requirements.txt
pipeline/: 01_bertopic.py  02_hierarchy.py  02_hierarchy_optimized.py  03_alignment.py  03_alignment_fast.py  04_rebuild_structure.py  05_semantic_align_v2.py  05_semantic_alignment.py  05_semantic_alignment_batch.py  06_add_hierarchy.py  06_add_hierarchy_llm.py  06_add_hierarchy_v2.py  07_build_flexible_hierarchy.py  08_reassign_topics.py  backfill_recent_range.py  bertopic_modeling.py  build_global_topic_run.py  build_topic_index.py  convert_topics_format.py  daily_fetch.py  daily_fetch_and_tag.py  daily_fetch_metadata.py  daily_generate_analysis.py  daily_tag_metadata.py  daily_update.py  db.py  evolution_analysis.py  evolution_decision_gate.py  evolution_experiment_logger.py  evolution_graph_analytics.py  evolution_graph_builder.py  evolution_hypothesis_generator.py  evolution_hypothesis_validator.py  evolution_loop.py  evolution_models.py  evolution_state_manager.py  evolution_viz_prep.py  export_analysis_static.py  export_graphiti_data.py  export_graphiti_snapshot.py  (+14 more)
tests/: test_aligner.py  test_analysis_pipeline.py  test_backfill_recent_range.py  (+22 more)
(+372 files in other folders)
