[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "academic-trend-monitor"
version = "0.1.0"
description = "Academic trend monitoring pipeline and static dashboard exports."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "arxiv>=2.1.0",
  "bertopic>=0.16.0",
  "claude-agent-sdk>=0.1.29",
  "faiss-cpu>=1.7.4",
  "feedparser>=6.0.0",
  "hdbscan>=0.8.33",
  "matplotlib>=3.7.0",
  "numpy>=1.24.0",
  "openai>=1.0.0",
  "pandas>=2.0.0",
  "plotly>=5.15.0",
  "psycopg[binary]>=3.1.18",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0",
  "requests>=2.31.0",
  "scikit-learn>=1.3.0",
  "sentence-transformers>=2.2.0",
  "umap-learn>=0.5.5",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv]
package = false
